<resources>
    <string name="app_name">Lovely Home Animals</string>
    <string name="my_pets">My pets</string>

    // LOGIN vs REGISTRATION
    <string name="login_slang">Lovely Home Animals</string>
    <string name="login_slang_drawer">Lovely\nHome Animals</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_create_account">No account yet? Create one</string>
    <string name="login_member">Already a member? Login</string>
    <string name="owner_name">Owner name</string>
    <string name="country">City</string>
    <string name="mobile">Mobile number</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_account">Create account</string>
    <string name="please_agree">Please agree to the Terms of Use and Privacy Policy</string>
    <string name="gdpr_checkbox">I understand and agree to MyHomePet</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="private_policy">Privacy Policy</string>
    <string name="signup_successful">Registration successful</string>
    <string name="unregister_user">This user is not registered</string>
    <string name="invalid_password">Invalid password</string>
    <string name="sign_out">Sign out</string>

    // INVALID VALUE
    <string name="no_name">This field cannot be blank</string>
    <string name="no_email">This field cannot be blank</string>
    <string name="email_incorrect">Email incorrect</string>
    <string name="email_exist">This email already exist</string>
    <string name="no_password">This field cannot be blank</string>
    <string name="password_too_short">The password too short</string>
    <string name="repassword_wrong">This password value don`t compile with password</string>
    <string name="checkbox_gdpr">Please agree to the Terms of Use and Privacy Policy</string>
    <string name="no_internet">No internet connection</string>
    <string name="error_password_change">Error: new password does not match the old password</string>
    <string name="error_name_change">Error: name can`t be blank</string>
    <string name="error_number_change">Error: the phone number may be incomplete</string>

    // MENU
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="communicate">Connect</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="info">Info</string>
    <string name="share_body">Share</string>
    <string name="share_by">Share content</string>
    <string name="facebook">Facebook</string>

    // MAIN LIST
    <string name="button_more">more</string>
    <string name="main_card_info">Card Info Pet</string>
    <string name="from">from:\ </string>
    <string name="to">to:\ </string>

    // EDIT ITEM
    <string name="save">Save</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_item">Delete</string>
    <string name="empty_list">Empty list</string>
    <string name="category">Category</string>
    <string name="action">Action</string>
    <string name="period">Period</string>
    <string name="breed">Breed</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_age">Pet age</string>
    <string name="vaccine">Availability of vaccinations</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description">Description</string>
    <string name="furniture">Inventory</string>
    <string name="furniture_description">Inventory description</string>
    <string name="owner">Owner</string>
    <string name="message">Write message</string>
    <string name="edit_item">Edit item</string>
    <string name="create_item">Create item</string>
    <string name="period_hint">Enter quantity days</string>
    <string name="age_hint">Enter quantity in month</string>
    <string name="day_from">Day from</string>
    <string name="day_to">Day to</string>

    // DIALOG
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="change_owner_name">Change name</string>
    <string name="change_owner_phone">Change phone number</string>
    <string name="change_owner_password">Change password</string>
    <string name="change_owner_city">Change city</string>

    // PET CATEGORIES
    <string name="dog">dog</string>
    <string name="cat">cat</string>
    <string name="see_pig">cavy</string>
    <string name="mouse">mouse</string>
    <string name="homyak">hamster</string>
    <string name="squirrel">squirrel</string>
    <string name="shinshila">chinchilla</string>
    <string name="popugay">parrot</string>
    <string name="sova">owl</string>
    <string name="kener">canary</string>
    <string name="chicken">chicken</string>
    <string name="spider">spider</string>
    <string name="kukarachi">decorative cockroach</string>
    <string name="butterfly">butterfly</string>
    
    // SETTINGS
    <string name="optional_settings">Optional settings</string>
    <string name="notification">Notification</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="hint_phone">0671234567</string>
    <string name="empty_phone">add your number</string>
    <string name="message_save_successful">All data saved successful!</string>

    // INFO
    <string name="info_view"><b>What is MVP Design Pattern?</b>\nModel View Presenter is an architectural pattern used to encourage/facilitate separation of concern in software projects.
\n\nMVP improves application architecture and facilitate unit testing.
\n\nMVP Architecture in Android separates business logic from view (activities/ fragments/custom views) through the presenter.
\n\n<b>The Model:</b>
\nModel layer is used to provide data to populate user interface.
\n\nBased on the business logic Model layer can provide required data from Network (through API call), from Application Shared Preferences or from SQLite Database.
\n\nModel layer cannot directly communicate with View. Although it has to provide data to the View (UI) but it will do so through presenter layer.</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="loading">Loading</string>
    <string name="error">Error</string>

    // SPINNER
    <string name="title_spinner_category">pet category</string>
    <string name="full">give pet</string>
    <string name="on_time">give for a term</string>

    <string-array name="pet_category">
        <item>категория питомца</item>
        <item>собака</item>
        <item>кошка</item>
        <item>морская свинка</item>
        <item>декоративная мишь</item>
        <item>хомяк</item>
        <item>белка</item>
        <item>шиншила</item>
        <item>попугай</item>
        <item>канарейка</item>
        <item>сова</item>
        <item>курица</item>
        <item>паук</item>
        <item>декоративный таракан</item>
        <item>бабочка</item>
        <item>жук</item>
        <item>аквариумные рыбки</item>
        <item>прудовые рыбы</item>
    </string-array>

    <string-array name="pet_action">
        <item>отдам в хорошие руки</item>
        <item>отдам на время</item>
    </string-array>

    <string-array name="city_owner">
        <item>Киев</item>
        <!--Винницкая область-->
        <item>Винница</item>
        <item>Жмеринка</item>
        <!--Волынская область-->
        <item>Луцк</item>
        <!--Днепропетровская область-->
        <item>Днепродзержинск</item>
        <item>Днепропетровск</item>
        <item>Кривой Рог</item>
        <item>Никополь</item>
        <item>Павлоград</item>
        <!--Донецкая область-->
        <item>Артемовск</item>
        <item>Горловка</item>
        <item>Дзержинск</item>
        <item>Донецк</item>
        <item>Енакиево</item>
        <item>Константиновка</item>
        <item>Краматорск</item>
        <item>Макеевка</item>
        <item>Мариуполь</item>
        <item>Славянск</item>
        <item>Торез</item>
        <item>Харцызск</item>
        <!--Житомирская область-->
        <item>Бердичев</item>
        <item>Житомир</item>
        <!--Закарпатская область-->
        <item>Мукачево</item>
        <item>Ужгород</item>
        <!--Запорожская область-->
        <item>Бердянск</item>
        <item>Запорожье</item>
        <item>Мукачево</item>
        <!--Ивано-Франковская область-->
        <item>Ивано-Франковск</item>
        <!--Киевская область-->
        <item>Белая Церковь</item>
        <item>Борисполь</item>
        <item>Бровары</item>
        <item>Ирпень</item>
        <!--Кировоградская область-->
        <item>Александрия</item>
        <item>Кировоград</item>
        <!--Луганская область-->
        <item>Алчевск</item>
        <item>Красный Луч</item>
        <item>Лисичанск</item>
        <item>Луганск</item>
        <item>Свердловск</item>
        <item>Северодонецк</item>
        <item>Стаханов</item>
        <!--Львовская область-->
        <item>Львов</item>
        <item>Жовква</item>
        <!--Николаевская область-->
        <item>Николаев</item>
        <!--Одесская область-->
        <item>Измаил</item>
        <item>Ильичевск</item>
        <item>Одесса</item>
        <!--Полтавская область-->
        <item>Комсомольск</item>
        <item>Кременчуг</item>
        <item>Полтава</item>
        <!--Ровенская область-->
        <item>Дубно</item>
        <item>Ровно</item>
        <!--Сумская область-->
        <item>Конотоп</item>
        <item>Сумы</item>
        <item>Шостка</item>
        <!--Тернопольская область-->
        <item>Тернополь</item>
        <!--Харьковская область-->
        <item>Лозовая</item>
        <item>Харьков</item>
        <!--Херсонская область-->
        <item>Каховка</item>
        <item>Херсон</item>
        <!--Хмельницкая область-->
        <item>Каменец-Подольский</item>
        <item>Хмельницкий</item>
        <!--Черкасская область-->
        <item>Смела</item>
        <item>Умань</item>
        <item>Черкассы</item>
        <!--Черниговская область-->
        <item>Нежин</item>
        <item>Чернигов</item>
        <item>Черновцы</item>
    </string-array>
</resources>
