<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main"
            android:title="@string/main"
            android:icon="@drawable/ic_main"/>

        <item
            android:id="@+id/nav_my_pet"
            android:icon="@drawable/ic_pets"
            android:title="@string/my_pets" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/info" />
        </menu>
    </item>
</menu>