<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/parent_margin_edge"
        android:paddingRight="@dimen/parent_margin_edge">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_12"
            android:src="@drawable/dog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_slang"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/banner_for_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:background="@color/complementary_red"
            android:elevation="2dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_8"
            android:paddingTop="@dimen/space_8"
            android:visibility="gone">

            <TextView
                style="@style/TextStyle_Body2_Primary_Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingEnd="@dimen/space_16"
                android:paddingStart="@dimen/space_16"
                android:text="@string/please_agree" />
        </LinearLayout>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/owner_name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!--Город-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle_SubHeader_Accent"
                android:layout_marginBottom="@dimen/space_4"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/input_owner_city"
                style="@style/TextStyle_Body2_Primary_Dark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_20" />

            <View
                style="@style/AppTheme.HorizontalSpinnerDivider"
                android:layout_marginTop="@dimen/space_8" />
        </LinearLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_input_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_rePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/checkbox_gdpr_touch_area"
                android:layout_width="@dimen/checkbox_size"
                android:layout_height="@dimen/checkbox_size"
                android:layout_marginEnd="@dimen/space_4"
                android:paddingStart="@dimen/space_8">

                <CheckBox
                    android:id="@+id/checkbox_gdpr"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:checked="true" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle_Body2_Primary_Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gdpr_checkbox" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_terms_of_use"
                        style="@style/TextStyle_Body2_Link_Color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_of_use" />

                    <TextView
                        style="@style/TextStyle_Body2_Primary_Dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" and " />

                    <TextView
                        android:id="@+id/text_agreement_gdpr"
                        style="@style/TextStyle_Body2_Link_Color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/private_policy" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/checkbox_gdpr_error"
            style="@style/TextAppearance.AppCompat.Small.ErrorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/checkbox_gdpr" />

        <!-- SignUp Button -->
        <Button
            android:id="@+id/btn_signup"
            style="@style/ButtonFillGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_24"
            android:layout_marginTop="@dimen/space_26"
            android:padding="@dimen/space_12"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/link_login"
            style="@style/TextStyle_Body2_Link_Color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_24"
            android:gravity="center"
            android:text="@string/login_member" />

    </LinearLayout>
</ScrollView>