<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/parent_margin_edge"
        android:paddingRight="@dimen/parent_margin_edge">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_12"
            android:src="@drawable/dog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_slang"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonFillGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_24"
            android:layout_marginTop="@dimen/space_24"
            android:padding="@dimen/space_12"
            android:text="@string/login" />

        <TextView
            android:id="@+id/link_signup"
            style="@style/TextStyle_Body2_Link_Color"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/space_24"
            android:gravity="center"
            android:text="@string/go_create_account" />

    </LinearLayout>
</ScrollView>